DiagramGenerators/old_antlr/modelicaParser.js
// Generated from modelica.g4 by ANTLR 4.13.2
// jshint ignore: start
import antlr4 from 'antlr4';
import modelicaListener from './modelicaListener.js';


const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.atn.PredictionContextCache();

export default class modelicaParser extends antlr4.Parser {

    static grammarFileName = "modelica.g4";
    static literalNames = [ null, "'\\uFEFF'", "'within'", "';'", "'final'", 
                            "'encapsulated'", "'partial'", "'class'", "'model'", 
                            "'operator'", "'record'", "'block'", "'expandable'", 
                            "'connector'", "'type'", "'package'", "'pure'", 
                            "'impure'", "'function'", "'end'", "'extends'", 
                            "'='", "'enumeration'", "'('", "':'", "')'", 
                            "'der'", "','", "'input'", "'output'", "'public'", 
                            "'protected'", "'external'", "'redeclare'", 
                            "'inner'", "'outer'", "'replaceable'", "'import'", 
                            "'.'", "'*'", "'{'", "'}'", "'.*'", "'constrainedby'", 
                            "'flow'", "'stream'", "'discrete'", "'parameter'", 
                            "'constant'", "'if'", "':='", "'each'", "'initial'", 
                            "'equation'", "'algorithm'", "'break'", "'return'", 
                            "'then'", "'elseif'", "'else'", "'for'", "'loop'", 
                            "'in'", "'while'", "'when'", "'elsewhen'", "'connect'", 
                            "'or'", "'and'", "'not'", "'<'", "'<='", "'>'", 
                            "'>='", "'=='", "'<>'", "'+'", "'-'", "'.+'", 
                            "'.-'", "'/'", "'./'", "'^'", "'.^'", "'false'", 
                            "'true'", "'['", "']'", "'annotation'" ];
    static symbolicNames = [ null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, "BOM", "WS", "LINE_COMMENT", "ML_COMMENT", 
                             "IDENT", "STRING", "UNSIGNED_NUMBER" ];
    static ruleNames = [ "stored_definition", "class_definition", "class_prefixes", 
                         "class_specifier", "long_class_specifier", "short_class_specifier", 
                         "der_class_specifier", "base_prefix", "enum_list", 
                         "enumeration_literal", "composition", "language_specification", 
                         "external_function_call", "element_list", "element", 
                         "import_clause", "import_list", "extends_clause", 
                         "constraining_clause", "component_clause", "type_prefix", 
                         "component_list", "component_declaration", "condition_attribute", 
                         "declaration", "modification", "class_modification", 
                         "argument_list", "argument", "element_modification_or_replaceable", 
                         "element_modification", "element_redeclaration", 
                         "element_replaceable", "component_clause1", "component_declaration1", 
                         "short_class_definition", "equation_section", "algorithm_section", 
                         "equation", "statement", "if_equation", "if_statement", 
                         "for_equation", "for_statement", "for_indices", 
                         "for_index", "while_statement", "when_equation", 
                         "when_statement", "connect_clause", "expression", 
                         "simple_expression", "logical_expression", "logical_term", 
                         "logical_factor", "relation", "relational_operator", 
                         "arithmetic_expression", "add_operator", "term", 
                         "mul_operator", "factor", "primary", "type_specifier", 
                         "name", "component_reference", "function_call_args", 
                         "function_arguments", "function_arguments_non_first", 
                         "array_arguments", "named_arguments", "named_argument", 
                         "function_argument", "function_partial_application", 
                         "output_expression_list", "expression_list", "array_subscripts", 
                         "subscript", "comment", "string_comment", "annotation_comment" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = modelicaParser.ruleNames;
        this.literalNames = modelicaParser.literalNames;
        this.symbolicNames = modelicaParser.symbolicNames;
    }



	stored_definition() {
	    let localctx = new Stored_definitionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, modelicaParser.RULE_stored_definition);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 163;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===1) {
	            this.state = 162;
	            this.match(modelicaParser.T__0);
	        }

	        this.state = 170;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===2) {
	            this.state = 165;
	            this.match(modelicaParser.T__1);
	            this.state = 167;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===93) {
	                this.state = 166;
	                this.name();
	            }

	            this.state = 169;
	            this.match(modelicaParser.T__2);
	        }

	        this.state = 180;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while((((_la) & ~0x1f) === 0 && ((1 << _la) & 524272) !== 0)) {
	            this.state = 173;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===4) {
	                this.state = 172;
	                this.match(modelicaParser.T__3);
	            }

	            this.state = 175;
	            this.class_definition();
	            this.state = 176;
	            this.match(modelicaParser.T__2);
	            this.state = 182;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 183;
	        this.match(modelicaParser.EOF);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	class_definition() {
	    let localctx = new Class_definitionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, modelicaParser.RULE_class_definition);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 186;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===5) {
	            this.state = 185;
	            this.match(modelicaParser.T__4);
	        }

	        this.state = 188;
	        this.class_prefixes();
	        this.state = 189;
	        this.class_specifier();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	class_prefixes() {
	    let localctx = new Class_prefixesContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 4, modelicaParser.RULE_class_prefixes);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 192;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===6) {
	            this.state = 191;
	            this.match(modelicaParser.T__5);
	        }

	        this.state = 215;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,11,this._ctx);
	        switch(la_) {
	        case 1:
	            this.state = 194;
	            this.match(modelicaParser.T__6);
	            break;

	        case 2:
	            this.state = 195;
	            this.match(modelicaParser.T__7);
	            break;

	        case 3:
	            this.state = 197;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===9) {
	                this.state = 196;
	                this.match(modelicaParser.T__8);
	            }

	            this.state = 199;
	            this.match(modelicaParser.T__9);
	            break;

	        case 4:
	            this.state = 200;
	            this.match(modelicaParser.T__10);
	            break;

	        case 5:
	            this.state = 202;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===12) {
	                this.state = 201;
	                this.match(modelicaParser.T__11);
	            }

	            this.state = 204;
	            this.match(modelicaParser.T__12);
	            break;

	        case 6:
	            this.state = 205;
	            this.match(modelicaParser.T__13);
	            break;

	        case 7:
	            this.state = 206;
	            this.match(modelicaParser.T__14);
	            break;

	        case 8:
	            this.state = 208;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===16 || _la===17) {
	                this.state = 207;
	                _la = this._input.LA(1);
	                if(!(_la===16 || _la===17)) {
	                this._errHandler.recoverInline(this);
	                }
	                else {
	                	this._errHandler.reportMatch(this);
	                    this.consume();
	                }
	            }

	            this.state = 211;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===9) {
	                this.state = 210;
	                this.match(modelicaParser.T__8);
	            }

	            this.state = 213;
	            this.match(modelicaParser.T__17);
	            break;

	        case 9:
	            this.state = 214;
	            this.match(modelicaParser.T__8);
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	class_specifier() {
	    let localctx = new Class_specifierContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 6, modelicaParser.RULE_class_specifier);
	    try {
	        this.state = 220;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,12,this._ctx);
	        switch(la_) {
	        case 1:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 217;
	            this.long_class_specifier();
	            break;

	        case 2:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 218;
	            this.short_class_specifier();
	            break;

	        case 3:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 219;
	            this.der_class_specifier();
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	long_class_specifier() {
	    let localctx = new Long_class_specifierContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 8, modelicaParser.RULE_long_class_specifier);
	    var _la = 0;
	    try {
	        this.state = 238;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 93:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 222;
	            this.match(modelicaParser.IDENT);
	            this.state = 223;
	            this.string_comment();
	            this.state = 224;
	            this.composition();
	            this.state = 225;
	            this.match(modelicaParser.T__18);
	            this.state = 226;
	            this.match(modelicaParser.IDENT);
	            break;
	        case 20:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 228;
	            this.match(modelicaParser.T__19);
	            this.state = 229;
	            this.match(modelicaParser.IDENT);
	            this.state = 231;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===23) {
	                this.state = 230;
	                this.class_modification();
	            }

	            this.state = 233;
	            this.string_comment();
	            this.state = 234;
	            this.composition();
	            this.state = 235;
	            this.match(modelicaParser.T__18);
	            this.state = 236;
	            this.match(modelicaParser.IDENT);
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	short_class_specifier() {
	    let localctx = new Short_class_specifierContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 10, modelicaParser.RULE_short_class_specifier);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 240;
	        this.match(modelicaParser.IDENT);
	        this.state = 241;
	        this.match(modelicaParser.T__20);
	        this.state = 259;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 28:
	        case 29:
	        case 38:
	        case 93:
	            this.state = 242;
	            this.base_prefix();
	            this.state = 243;
	            this.type_specifier();
	            this.state = 245;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===86) {
	                this.state = 244;
	                this.array_subscripts();
	            }

	            this.state = 248;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===23) {
	                this.state = 247;
	                this.class_modification();
	            }

	            break;
	        case 22:
	            this.state = 250;
	            this.match(modelicaParser.T__21);
	            this.state = 251;
	            this.match(modelicaParser.T__22);
	            this.state = 256;
	            this._errHandler.sync(this);
	            switch(this._input.LA(1)) {
	            case 25:
	            case 93:
	                this.state = 253;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	                if(_la===93) {
	                    this.state = 252;
	                    this.enum_list();
	                }

	                break;
	            case 24:
	                this.state = 255;
	                this.match(modelicaParser.T__23);
	                break;
	            default:
	                throw new antlr4.error.NoViableAltException(this);
	            }
	            this.state = 258;
	            this.match(modelicaParser.T__24);
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	        this.state = 261;
	        this.comment();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	der_class_specifier() {
	    let localctx = new Der_class_specifierContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 12, modelicaParser.RULE_der_class_specifier);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 263;
	        this.match(modelicaParser.IDENT);
	        this.state = 264;
	        this.match(modelicaParser.T__20);
	        this.state = 265;
	        this.match(modelicaParser.T__25);
	        this.state = 266;
	        this.match(modelicaParser.T__22);
	        this.state = 267;
	        this.type_specifier();
	        this.state = 268;
	        this.match(modelicaParser.T__26);
	        this.state = 269;
	        this.match(modelicaParser.IDENT);
	        this.state = 274;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===27) {
	            this.state = 270;
	            this.match(modelicaParser.T__26);
	            this.state = 271;
	            this.match(modelicaParser.IDENT);
	            this.state = 276;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 277;
	        this.match(modelicaParser.T__24);
	        this.state = 278;
	        this.comment();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	base_prefix() {
	    let localctx = new Base_prefixContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 14, modelicaParser.RULE_base_prefix);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 281;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===28 || _la===29) {
	            this.state = 280;
	            _la = this._input.LA(1);
	            if(!(_la===28 || _la===29)) {
	            this._errHandler.recoverInline(this);
	            }
	            else {
	            	this._errHandler.reportMatch(this);
	                this.consume();
	            }
	        }

	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	enum_list() {
	    let localctx = new Enum_listContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 16, modelicaParser.RULE_enum_list);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 283;
	        this.enumeration_literal();
	        this.state = 288;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===27) {
	            this.state = 284;
	            this.match(modelicaParser.T__26);
	            this.state = 285;
	            this.enumeration_literal();
	            this.state = 290;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	enumeration_literal() {
	    let localctx = new Enumeration_literalContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 18, modelicaParser.RULE_enumeration_literal);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 291;
	        this.match(modelicaParser.IDENT);
	        this.state = 292;
	        this.comment();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	composition() {
	    let localctx = new CompositionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 20, modelicaParser.RULE_composition);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 294;
	        this.element_list();
	        this.state = 303;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(((((_la - 30)) & ~0x1f) === 0 && ((1 << (_la - 30)) & 29360131) !== 0)) {
	            this.state = 301;
	            this._errHandler.sync(this);
	            var la_ = this._interp.adaptivePredict(this._input,23,this._ctx);
	            switch(la_) {
	            case 1:
	                this.state = 295;
	                this.match(modelicaParser.T__29);
	                this.state = 296;
	                this.element_list();
	                break;

	            case 2:
	                this.state = 297;
	                this.match(modelicaParser.T__30);
	                this.state = 298;
	                this.element_list();
	                break;

	            case 3:
	                this.state = 299;
	                this.equation_section();
	                break;

	            case 4:
	                this.state = 300;
	                this.algorithm_section();
	                break;

	            }
	            this.state = 305;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 317;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===32) {
	            this.state = 306;
	            this.match(modelicaParser.T__31);
	            this.state = 308;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===94) {
	                this.state = 307;
	                this.language_specification();
	            }

	            this.state = 311;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===38 || _la===93) {
	                this.state = 310;
	                this.external_function_call();
	            }

	            this.state = 314;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===88) {
	                this.state = 313;
	                this.annotation_comment();
	            }

	            this.state = 316;
	            this.match(modelicaParser.T__2);
	        }

	        this.state = 322;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===88) {
	            this.state = 319;
	            this.annotation_comment();
	            this.state = 320;
	            this.match(modelicaParser.T__2);
	        }

	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	language_specification() {
	    let localctx = new Language_specificationContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 22, modelicaParser.RULE_language_specification);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 324;
	        this.match(modelicaParser.STRING);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	external_function_call() {
	    let localctx = new External_function_callContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 24, modelicaParser.RULE_external_function_call);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 329;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,30,this._ctx);
	        if(la_===1) {
	            this.state = 326;
	            this.component_reference();
	            this.state = 327;
	            this.match(modelicaParser.T__20);

	        }
	        this.state = 331;
	        this.match(modelicaParser.IDENT);
	        this.state = 332;
	        this.match(modelicaParser.T__22);
	        this.state = 334;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if((((_la) & ~0x1f) === 0 && ((1 << _la) & 76087296) !== 0) || ((((_la - 38)) & ~0x1f) === 0 && ((1 << (_la - 38)) & 2147502085) !== 0) || ((((_la - 76)) & ~0x1f) === 0 && ((1 << (_la - 76)) & 919311) !== 0)) {
	            this.state = 333;
	            this.expression_list();
	        }

	        this.state = 336;
	        this.match(modelicaParser.T__24);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	element_list() {
	    let localctx = new Element_listContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 26, modelicaParser.RULE_element_list);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 343;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while((((_la) & ~0x1f) === 0 && ((1 << _la) & 806879216) !== 0) || ((((_la - 33)) & ~0x1f) === 0 && ((1 << (_la - 33)) & 63551) !== 0) || _la===93) {
	            this.state = 338;
	            this.element();
	            this.state = 339;
	            this.match(modelicaParser.T__2);
	            this.state = 345;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


